// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. icontwitter renders 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 16,
      "width": 20,
    }
  }
>
  <ARTGroup
    transform={
      Array [
        0.02666666666666667,
        0,
        0,
        0.02666666666666667,
        9.440000000000001,
        7.44,
      ]
    }
  >
    <ARTShape
      d="2b20b5d514bdec5d4c2f5d1eb0ad437c"
      fill={
        Array [
          0,
          0,
          0.4,
          0.6,
          1,
        ]
      }
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`2. iconvideo renders 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 11.764705882352942,
      "width": 20,
    }
  }
>
  <ARTGroup
    transform={
      Array [
        0.29411764705882354,
        0,
        0,
        0.29411764705882354,
        0,
        0,
      ]
    }
  >
    <ARTShape
      d="f7a00e51bbe09015abd28c5265dc80fd"
      fill={
        Array [
          0,
          0.11372549019607843,
          0.11372549019607843,
          0.10588235294117647,
          1,
        ]
      }
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
    <ARTShape
      d="4a12958bc1788eacc2b5e8cff1335641"
      fill={
        Array [
          0,
          0.11372549019607843,
          0.11372549019607843,
          0.10588235294117647,
          1,
        ]
      }
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`3. iconemail renders 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 14.545454545454545,
      "width": 20,
    }
  }
>
  <ARTGroup
    transform={
      Array [
        0.9090909090909091,
        0,
        0,
        0.9090909090909091,
        0,
        0,
      ]
    }
  >
    <ARTGroup
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    >
      <ARTShape
        d="4c3e2447d8a07529d4601a20e2be1f86"
        fill={
          Array [
            0,
            0.11372549019607843,
            0.11372549019607843,
            0.10588235294117647,
            1,
          ]
        }
        stroke={null}
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`4. iconstar renders 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 20,
      "width": 20,
    }
  }
>
  <ARTGroup
    transform={
      Array [
        1.1764705882352942,
        0,
        0,
        1.1764705882352942,
        -14.117647058823529,
        -12.941176470588236,
      ]
    }
  >
    <ARTShape
      d="f40095102020601e0dbdf5ec3d81fbd2"
      fill={
        Array [
          0,
          0.11372549019607843,
          0.11372549019607843,
          0.10588235294117647,
          1,
        ]
      }
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`5. iconfacebook renders 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 40,
      "width": 20,
    }
  }
>
  <ARTGroup
    transform={
      Array [
        2,
        0,
        0,
        2,
        -28,
        -20,
      ]
    }
  >
    <ARTGroup
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    >
      <ARTShape
        d="2189892cba14977e0cdb05b5f065a642"
        fill={
          Array [
            0,
            0.11372549019607843,
            0.11372549019607843,
            0.10588235294117647,
            1,
          ]
        }
        stroke={null}
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`6. thestlogo renders 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 20,
      "width": 20,
    }
  }
>
  <ARTGroup
    transform={
      Array [
        0.21052631578947367,
        0,
        0,
        0.21052631578947367,
        0,
        0,
      ]
    }
  >
    <ARTShape
      d="4ac8c91d91e5d81cca0a152cd054a1ad"
      fill={
        Array [
          0,
          1,
          1,
          1,
          1,
        ]
      }
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`7. thetimeslogo renders 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 20,
      "width": 20,
    }
  }
>
  <ARTGroup
    transform={
      Array [
        0.21052631578947367,
        0,
        0,
        0.21052631578947367,
        0,
        0,
      ]
    }
  >
    <ARTShape
      d="4ac8c91d91e5d81cca0a152cd054a1ad"
      fill={
        Array [
          0,
          1,
          1,
          1,
          1,
        ]
      }
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`8. iconvideo360player renders 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 18.51851851851852,
      "width": 20,
    }
  }
>
  <ARTGroup
    transform={
      Array [
        0.18518518518518517,
        0,
        0,
        0.18518518518518517,
        0,
        0,
      ]
    }
  >
    <ARTShape
      d="dd25590e8bea14b59c417927beaf48a4"
      fill={
        Array [
          0,
          0,
          0.4,
          0.6,
          1,
        ]
      }
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTGroup>
</ARTSurfaceView>
`;
